--- a/application.json
+++ b/application.json
@@ -5,7 +5,7 @@
   "unreadCommentThreads": 0,
   "color": "#F3F1C7",
   "icon": "chinese-remnibi",
-  "slug": "sid-test",
+  "slug": "fictional-computing-machine",
   "evaluationVersion": 2,
   "createdAt": {
     "seconds": 1647523755,
